@@ -22,9 +22,9 @@ foreach(test ${tests})
   if(NOT MSVC)
     add_test(${test}_Test ${CMAKE_BINARY_DIR}/test/${test}test)
   else(NOT MSVC)
-    add_test(${test}_Test ${CMAKE_BINARY_DIR}/src/${test}test)
+    add_test(${test}_Test ${CMAKE_BINARY_DIR}/${test}test)
   endif(NOT MSVC)
-  set_target_properties(${test}test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/src")
+  set_target_properties(${test}test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
   set_tests_properties(${test}_Test PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed")
 endforeach(test ${tests})
 
@@ -70,9 +70,9 @@ foreach(test ${old_tests})
   if(NOT MSVC)
     add_test(${test}_Test ${CMAKE_BINARY_DIR}/test/${test})
   else(NOT MSVC)
-    add_test(${test}_Test ${CMAKE_BINARY_DIR}/src/${test})
+    add_test(${test}_Test ${CMAKE_COMMAND} -E chdir ${CMAKE_BINARY_DIR}/Debug ${CMAKE_BINARY_DIR}/Debug/${test})
   endif(NOT MSVC)
-  set_target_properties(${test} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/src")
+  set_target_properties(${test} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
   set_tests_properties(${test}_Test PROPERTIES FAIL_REGULAR_EXPRESSION "not ok")
 endforeach(test ${old_tests})
 
